[package]
name = "glcube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# BIN GLCUBE
[[bin]]
name= "glcube"
path = "src/main.rs"


[dependencies]
bevy = { version="0.8.1" }



# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


